force-app/main/default/objects/Bottom_Up_Construct__c/Bottom_Up_Construct__c.object-meta.xml
<CustomObject>
    <label>Bottom Up Construct</label>
    <nameField>
        <displayFormat>BUC-{0000000}</displayFormat>
        <label>Bottom Up  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bottom Up Constructs</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>