force-app/main/default/objects/Bottom_Up_Construct__c/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Account Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Bottom Up Constructs</relationshipLabel>
    <relationshipName>Bottom_Up_Constructs</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>