force-app/main/default/objects/Bottom_Up_Construct__c/fields/Account_Plan__c.field-meta.xml
<CustomField>
    <fullName>Account_Plan__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Account Plan</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Please select only BUC&apos;s Account related Account Plans</errorMessage>
        <filterItems>
            <field>$Source.Account_Name__c</field>
            <operation>equals</operation>
            <valueField>Account_Plan__c.Account_Name__c</valueField>
        </filterItems>
        <filterItems>
            <field>$Source.Fiscal_Year__c</field>
            <operation>equals</operation>
            <valueField>Account_Plan__c.Fiscal_Year__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account_Plan__c</referenceTo>
    <relationshipLabel>Bottom Up Constructs</relationshipLabel>
    <relationshipName>Bottom_Up_Constructs</relationshipName>
    <type>Lookup</type>
</CustomField>