force-app/main/default/objects/Bottom_Up_Construct__c/fields/Fiscal_Year__c.field-meta.xml
<CustomField>
    <fullName>Fiscal_Year__c</fullName>
    <label>Fiscal Year</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2021</fullName>
            </value>
            <value>
                <fullName>2022</fullName>
            </value>
            <value>
                <fullName>2023</fullName>
            </value>
            <value>
                <fullName>2024</fullName>
                <default>true</default>
                <label>2024</label>
            </value>
            <value>
                <fullName>2025</fullName>
            </value>
            <value>
                <fullName>2014</fullName>
                <isActive>false</isActive>
                <label>2014</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>