force-app/main/default/objects/Bottom_Up_Construct__c/fields/Product_Solution__c.field-meta.xml
<CustomField>
    <fullName>Product_Solution__c</fullName>
    <formula>TEXT(Product_Category__r.Family)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Solution</label>
    <type>Text</type>
</CustomField>