force-app/main/default/objects/Bottom_Up_Construct__c/fields/Total_Competitor_Spends__c.field-meta.xml
<CustomField>
    <fullName>Total_Competitor_Spends__c</fullName>
    <label>Total Competitor Spends</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>