force-app/main/default/objects/Bottom_Up_Construct__c/validationRules/Fiscal_Year_Mismatch.validationRule-meta.xml
<ValidationRule>
    <fullName>Fiscal_Year_Mismatch</fullName>
    <active>true</active>
    <errorConditionFormula>AND( NOT(ISBLANK( Account_Plan__c )) ,TEXT(Fiscal_Year__c)  &lt;&gt;  TEXT(Account_Plan__r.Fiscal_Year__c))</errorConditionFormula>
    <errorMessage>BUC and Account Plan should have same Fiscal Year</errorMessage>
</ValidationRule>