force-app/main/default/objects/Bottom_Up_Construct__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Fiscal_Year__c</columns>
    <columns>Account_Name__c</columns>
    <columns>Account_Plan__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>